test/spec_vectors/simd_i64x2_cmp/fail/module_3.wat
(module (func (result v128) (i64x2.ge_s (i32.const 0) (f32.const 0))))